syntax = "proto3";

package brandpb;

option go_package = "gen/brandpb;brandpb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

//Brand Entity
message Brand {
    string id = 1;
    string name = 2;
    string description = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

//Create
message CreateBrandRequest {
    string name = 1;
    string description =2;
}

message CreateBrandResponse {
    Brand brand =  1;
}

//Get
message GetBrandRequest {
    string id = 1;
}

message GetBrandResponse {
    Brand brand = 1;
}

//Update
message UpdateBrandRequest {
    string id  = 1;
    string name = 2;
    string description = 3;
}

message UpdateBrandResponse {
    Brand brand = 1;
}

//Delete
message DeleteBrandRequest {
    string id = 1;
}

message DeleteBrandResponse {
    google.protobuf.Empty empty = 1;
}

//List
message ListBrandsRequest {
  int32 limit = 1;      // page size
  string page_token = 2; // opaque cursor
}

message ListBrandsResponse {
  repeated Brand brands = 1;
  string next_page_token = 2;
}

service BrandService {
    rpc CreateBrand(CreateBrandRequest) returns (CreateBrandResponse);
    rpc GetBrand(GetBrandRequest) returns (GetBrandResponse);
    rpc UpdateBrand(UpdateBrandRequest) returns (UpdateBrandResponse);
    rpc DeleteBrand(DeleteBrandRequest) returns (DeleteBrandResponse);
    rpc ListBrands(ListBrandsRequest) returns (ListBrandsResponse);
}
